[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Midterm 2"
version = "0.0.1"
authors = [
    { name="Avishai Colman", email="avishai.colman@ucalgary.ca" },
]
description="GOPH419 Midterm 2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/AvishaiColman/goph419-f2024-midterm2-AC"